--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ fabric.properties
 # Ignore everything but code style settings and run configurations
 # that are supposed to be shared within teams.
 
-.idea/*
+.idea
 
 !.idea/codeStyles
 !.idea/runConfigurations
@@ -141,5 +141,4 @@ gradle-app.setting
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
-
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,kotlin,gradle
